Stopped autoplay on iOS devices, added background colour, fixed styling error on inputs for iOS devices

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@ input:-webkit-autofill:active {
   box-shadow: inset 0 0 20px 20px #23232329;
 }
 
+textarea,
+input[type="text"],
+input[type="button"],
+input[type="submit"] {
+  -webkit-appearance: none;
+  border-radius: 0;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
